RESOLVED FIXED181873
[Curl] Wrong redirect with relative url when it happens from different host than original host.
https://bugs.webkit.org/show_bug.cgi?id=181873
Summary [Curl] Wrong redirect with relative url when it happens from different host t...
Basuke Suzuki
Reported 2018-01-19 12:39:22 PST
Say initial request to host A is redirected to host B and that request is also redirected with relative url. It should be host B, but curl implementation send that to host A.
Attachments
Fix (2.16 KB, patch)
2018-01-23 16:30 PST, Basuke Suzuki
no flags
Basuke Suzuki
Comment 1 2018-01-19 12:40:27 PST
https://tools.ietf.org/html/rfc7231#section-7.1.2 > The field value consists of a single URI-reference. When it has the > form of a relative reference ([RFC3986], Section 4.2), the final > value is computed by resolving it against the effective request URI > ([RFC3986], Section 5).
Basuke Suzuki
Comment 2 2018-01-23 16:30:52 PST
WebKit Commit Bot
Comment 3 2018-01-23 17:08:33 PST
Comment on attachment 332095 [details] Fix Clearing flags on attachment: 332095 Committed r227465: <https://trac.webkit.org/changeset/227465>
WebKit Commit Bot
Comment 4 2018-01-23 17:08:35 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2018-01-23 17:11:22 PST
Note You need to log in before you can comment on or make changes to this bug.