[Curl] Fix wrong redirection with relative url when it happens from different host than original host. https://bugs.webkit.org/show_bug.cgi?id=181873

Patch by Basuke Suzuki <Basuke.Suzuki@sony.com> on 2018-01-23
Reviewed by Alex Christensen.

* platform/network/curl/CurlDownload.cpp:
(WebCore::CurlDownload::willSendRequest):
* platform/network/curl/ResourceHandleCurlDelegate.cpp:
(WebCore::ResourceHandleCurlDelegate::willSendRequest):

Canonical link: https://commits.webkit.org/197858@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@227465 268f45cc-cd09-0410-ab3c-d52691b4dbfc